--- a/pages/criarconta.html
+++ b/pages/criarconta.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Criar Conta</title>
+    <link rel="shortcut icon" href="./img/TAREFA.svg" type="image/x-icon">
+    <title>CRIAR CONTA-TAREFA</title>
     <script src="../js/criarconta.js"></script>
     <link rel="stylesheet" href="../css/criarconta.css">
 </head>
