--- a/pages/login.html
+++ b/pages/login.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>LOGIN-TAREFA</title>
     <script src="../js/login.js" defer></script>
+    <link rel="shortcut icon" href="./img/TAREFA.svg" type="image/x-icon">
     <link rel="stylesheet" href="../pages/login.html">
     <link rel="stylesheet" href="../css/login.css">
 </head>
