--- a/pages/tarefa.html
+++ b/pages/tarefa.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/tarefas.css">
+    <link rel="stylesheet" href="../js/criarTarefa.js">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./img/TAREFA.svg" type="image/x-icon">
     <script src="../app.js"defer></script>
     <title>Tarefas</title>
 </head>
@@ -17,9 +19,9 @@
     </header>
     <main>
         <div class="container">
-            <h1 class="tarefa-title">TITULO DA TAREFA</h1>
+            <h1 class="tarefa-title" id="titulo">TITULO DA TAREFA</h1>
             <p class="tarefa-descricao">Aqui vai a descrição de suas tarefas...</p>
-            <p class="data-conclusao">28/02/2024</p>
+            <p class="data-conclusao" id="data">28/02/2024</p>
         </div>
         <div class="container">
             <h1 class="tarefa-title">TITULO DA TAREFA</h1>
