--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
-    <title>Tela inicial</title>
+    <link rel="shortcut icon" href="./img/TAREFA.svg" type="image/x-icon">
+    <title>TAREFAS</title>
 </head>
 <body>
     <header>
